<resources>
    <string name="app_name">InvesTICKations</string>
    <string name="title_activity_personal_info">My Info</string>
    <string name="title_activity_guide_master">Tick Guide</string>
    <string name="title_activity_user_activity_main">My Activities</string>
    <string name="title_activity_observation_main">My Observations</string>
    <string name="title_activity_home">InvesTICKations</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_fragment_activity_detail">Activity Details</string>
    <string name="title_fragment_activity_new">Start Activity</string>
    <string name="title_fragment_activity_running">Ongoing Activity</string>
    <string name="title_fragment_activity_list">My Activities</string>
    <string name="title_fragment_activity_map">Activity Map</string>
    <string name="title_fragment_observation_detail">Observation Details</string>
    <string name="title_fragment_observation_add">Add Observation</string>
    <string name="title_fragment_observation_edit">Edit Observation</string>
    <string name="title_fragment_observation_list">My Observations</string>
    <string name="title_fragment_login">Login</string>
    <string name="title_fragment_register">Sign Up</string>
    <string name="title_fragment_home">Home</string>
    <string name="title_fragment_dashboard">Dashboard</string>
    <string name="title_fragment_tick_list">Ticks</string>
    <string name="title_fragment_tick_detail">Tick Details</string>
    <string name="title_fragment_profile">My Profile</string>
    <string-array name="navdrawer">
        <item>Home</item>
        <item>Activities</item>
        <item>Observations</item>
        <item>Guide</item>
        <item>Settings</item>
        <item>Register</item>
    </string-array>
    <string name="nav_home">Home</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_activities">Activities</string>
    <string name="nav_observations">Observations</string>
    <string name="nav_guide">Tick Guide</string>
    <string name="nav_map">Tick Map</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_tutorial">Tutorial</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="fullName">Full Name</string>
    <string name="email">abs@xyz.com</string>
    <string name="textEmail">Email</string>
    <string name="password">***</string>
    <string name="textPassword">Password</string>
    <string name="phoneNumber">Phone</string>
    <string name="address">Home Address</string>
    <string name="privacyPolicy">I agree to Terms and Conditions</string>
    <string name="signup">Sign Up</string>
    <string name="textSignUp">Sign Up</string>
    <string name="title_privacy_agreement">InvesTICKations Privacy Agreement</string>
    <string name="privacyAgreement"><![CDATA[We respect your privacy. Your address will only be visible to the administrators of the project and we will not distribute it to anyone. When viewing your " account" page, you will see your own address, but it will not be visible to other users. We will show a dot on our on - line map that indicates the center of the zip code or postal code in which your observations were made and in this way we will assure that the exact location of your observations remains confidential. This Privacy Policy governs the manner in which InvesTICKations collects, uses, maintains and discloses information collected from users (each, a "User") of the investickations.com website ("Site"). This privacy policy applies to the Site and all products and services offered by InvesTICKations.]]></string>
    <string name="profile_name">Full name</string>
    <string name="profile_email">Email</string>
    <string name="profile_address">Address</string>
    <string name="profile_city">City</string>
    <string name="profile_state">State</string>
    <string name="profile_zip">Zip Code</string>
    <string name="profile_save">Update</string>
    <string name="login">Login</string>
    <string name="text_zipcode">Zip Code</string>
    <string name="text_state">State</string>
    <string name="text_city">City</string>
    <string name="text_activityName">Hiking trail</string>
    <string name="text_observationName">American Tick</string>
    <string name="text_locationName">Golden Gate Park</string>
    <string name="text_tickName">Tick Name</string>
    <string name="text_totalDistance">6 Miles</string>
    <string name="text_totalObservations">5 Observations</string>
    <string name="text_totalPeople">4 people</string>
    <string name="text_totalPets">1 pets</string>
    <string name="text_speciesName">1 pet</string>
    <string name="text_referTickGuide">View Tick Guide</string>
    <string name="text_edit_referTickGuide">Refer Tick Guide</string>
    <string name="text_chooseTickInfo">Can\'t recognize tick?</string>
    <string name="tickSpecies">Tick Species</string>
    <string name="tickName">American Dog Tick</string>
    <string name="tickImagesDesc">Tick Image</string>
    <string name="tickCount">Total number of Ticks</string>
    <string name="tickDescription">Description</string>
    <string name="alert_chooseTick">Choose the desired Tick:</string>
    <string name="message_location_not_found">not found</string>
    <string name="activityList_info">Bummer! No Activity yet. Click &#8216;+&#8217; to create an Activity</string>
    <string name="observationList_info">Bummer! No Observations yet. Click &#8216;+&#8217; to post an Observation</string>
    <string name="activityDetails">Additional Information</string>
    <string name="actDet_viewAllObservations">View Observations</string>
    <string name="actDet_noObservationRecorded">No Observations recorded</string>
    <string name="text_add_observation_disclaimer">Click button to record Tick</string>
    <string name="text_stop_activity">Click button to stop Activity</string>
    <string name="activity_running_status_active">Active  </string>
    <string name="actListItem_name">Hiking @ Golden Gate Presidio</string>
    <string name="actListItem_date">Jan 1st 2016</string>
    <string name="actListItem_click">Click for details</string>
    <string name="button_startActivity">Start Activity</string>
    <string name="button_register">Register</string>
    <string name="button_login">Already have an account? Log in</string>
    <string name="button_textLogin">LOG IN</string>
    <string name="button_postObservation">Post Observation</string>
    <string name="button_updateObservation">Update Observation</string>
    <string name="button_addObservation">Add Observation</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="text_change_picture">Change Picture</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_search">Search</string>
    <string name="action_upload">Upload</string>
    <string name="action_delete">Delete</string>
    <string name="action_filter">Filter</string>
    <string name="action_post">Post</string>
    <string name="action_more">More</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="gps_network_not_enabled">GPS - Network not enabled</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_tick_info">TickInfoActivity</string>
    <string name="activityRunning_activityInfo">Your current ongoing Activity:</string>
    <string name="alertDialog_cancel">Cancel</string>
    <string name="alertDialog_apply">Apply</string>
    <string name="alertDialog_OK">OK</string>
    <string name="alertDialog_YES">YES</string>
    <string name="alertDialog_NO">NO</string>
    <string name="alertDialog_ignore">Ignore</string>
    <string name="alertDialog_agree">Agree</string>
    <string name="alertDialog_inputManual">Or, enter when you want to get reminded for tick encounters</string>
    <string name="alertDialog_stop_reminder">Stop Reminder</string>
    <string name="alertDialog_change_reminder">Change Reminder</string>
    <string name="alertDialog_reminder_status">Reminder set for</string>
    <string name="alertDialog_inputManual_hint">15 mins</string>
    <string name="alertDialog_reminder_30">30</string>
    <string name="alertDialog_reminder_30_mins">30 mins</string>
    <string name="alertDialog_reminder_60">60</string>
    <string name="alertDialog_reminder_set">Set Reminder</string>
    <string name="alertDialog_open_observation">Open Observation</string>
    <string name="alertDialog_continue">Continue</string>
    <string name="alertDialog_openActivity_title">Open an Activity?</string>
    <string name="alertDialog_openActivity_message">It is advisable to make observations under an Activity.</string>
    <string name="alertDialog_alert_title">Found any Tick?</string>
    <string name="alertDialog_alert_message">Don&#8217;t forget to add Observation for Tick</string>
    <string name="alertDialog_current_reminder">Current Reminder</string>
    <string name="alertDialog_set_reminder">Set Reminder</string>
    <string name="alertDialog_delete_activity_warning">Are you sure you want to delete this Activity? Deleting Activity
        results in Deleting all the Observations made during the Activity.</string>
    <string name="alertDialog_delete_observation_warning">Are you sure you want to delete this Observation?</string>
    <string name="alertDialog_upload">Upload</string>
    <string name="alertDialog_later">Later</string>
    <string name="alertDialog_title_upload_activities">Upload Activities?</string>
    <string name="alertDialog_title_no_upload">Nothing to upload</string>
    <string name="alertDialog_title_upload_observations">Upload Observation?</string>
    <string name="alertDialog_upload_message">Do you want to upload the data on server?</string>
    <string name="alertDialog_tickImage_title">Add Tick Picture</string>
    <string name="alertDialog_tickImage_message">How do you want to take Tick picture?</string>
    <string name="alertDialog_tickImage_camera">Camera</string>
    <string name="alertDialog_tickImage_gallery">Gallery</string>
    <string name="dash_stepInfo">Easy to use steps:</string>
    <string name="dash_step1">1) Start Activity</string>
    <string name="dash_step2">2) Make Observation</string>
    <string name="dash_step3">3) Refer to Tick Guide</string>
    <string name="dash_postObservation">POST\nOBSERVATION</string>
    <string name="dash_startActivity">START\nACTIVITY</string>
    <string name="dash_activityCount">0</string>
    <string name="dash_obsCount">0</string>
    <string name="dash_myActivities">MY PREVIOUS\nACTIVITIES</string>
    <string name="dash_myObservations">MY PREVIOUS\nOBSERVATIONS</string>
    <string name="dash_tapForDetails">tap here for details</string>
    <string name="dash_recentActivity">Your most recent Activities</string>
    <string name="actNew_totalPets">Total Pets</string>
    <string name="actNew_totalPeople">Total People</string>
    <string name="actNew_setReminder">Set Reminder</string>
    <string name="basicInfo">Basic Information</string>
    <string name="tick_species">Common Name:</string>
    <string name="tick_scientific_name">Scientific Name:</string>
    <string name="tick_knownFor">Diseases:</string>
    <string name="tick_location_habitat">Habitat:</string>
    <string name="tick_season">Seasonality:</string>
    <string name="tick_geo_location">Geo. Location:</string>
</resources>